# cfo_agent

./: .env.example  .gitignore  CFOAgent_context.md  CLAUDE.md  claude-code-project-setup.md  config.py  main.py  pyproject.toml
.claude/: settings.json
.claude/commands/: add-table.md  new-node.md  test-guardrail.md
.claude/rules/: clean-code.md  config-patterns.md  design-patterns.md  langgraph-patterns.md  solid.md  sql-safety.md  testing.md
agent/: audit.py  graph.py  llm_factory.py  state.py
agent/nodes/: base.py  error_handler.py  executor.py  guardrail.py  nl2sql.py  response_builder.py
db/: engine.py  executor.py
prompts/: nl2sql.jinja2
schema_registry/: protocols.py  registry.py  schema.yaml
teams/: adapter.py
tests/: conftest.py
tests/integration/: test_nl2sql_node.py
tests/unit/: test_guardrail.py  test_response_builder.py  test_schema_registry.py
